--- a/public/index.html
+++ b/public/index.html
@@ -5,9 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>vanilla html js netlify example</title>
+
+    <link rel="stylesheet" type="text/css" href="index.css" />
+    <script type="text/javascript" src="/script.js"></script>
   </head>
   <body>
     <h1>Vanilla HTML JS netlify example</h1>
-    <button>Click me</button>
+    <div class="center"><button id="button">Click me</button></div>
+    <pre id="message">
+      Click the button!
+    </pre>
   </body>
 </html>
