--- a/public/index.html
+++ b/public/index.html
@@ -15,5 +15,8 @@
     <pre id="message">
       Click the button!
     </pre>
+    <div>
+      <a href="https://github.com/netlify-labs/vanilla-html-js-example">View source</a>
+    </div>
   </body>
 </html>
